crates/sui-prover/tests/snapshots/one-assert.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures assertion does not hold
   ┌─ tests/inputs/one-assert.fail.move:13:3
   │
13 │   ensures(false);
   │   ^^^^^^^^^^^^^^
   │
   =     at tests/inputs/one-assert.fail.move:12: foo_failing_spec
